[gd_scene load_steps=12 format=3 uid="uid://b6sidrweg1p0"]

[ext_resource type="Script" path="res://scenes/interactable.gd" id="1_m6fs8"]
[ext_resource type="Shader" path="res://shaders/outline_shader.gdshader" id="2_5kqll"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_resource.gd" id="2_bvr64"]
[ext_resource type="Texture2D" uid="uid://bk0ke78wvceem" path="res://textures/symbols/textLable.png" id="2_igama"]
[ext_resource type="Script" path="res://scenes/interactable_resource.gd" id="3_0x2wn"]
[ext_resource type="LabelSettings" uid="uid://d1lvtjugos2m4" path="res://settings/Interactable_label_settings.tres" id="4_oco1s"]
[ext_resource type="Script" path="res://scripts/dialog_handler.gd" id="5_o84kc"]
[ext_resource type="Script" path="res://scripts/interactive_handler.gd" id="6_wipk1"]

[sub_resource type="Resource" id="Resource_rbs5y"]
resource_local_to_scene = true
script = ExtResource("3_0x2wn")
item_name = "test"
timeline = "000"
type = 0
description = "Test Description"
dialogIndex = 0
dialogs = Array[ExtResource("2_bvr64")]([])
titleIndex = 0
titles = PackedStringArray()

[sub_resource type="RectangleShape2D" id="RectangleShape2D_356m4"]
resource_local_to_scene = true
size = Vector2(12, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_28gpt"]
resource_local_to_scene = true
shader = ExtResource("2_5kqll")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.0

[node name="interactable_base" type="Area2D"]
script = ExtResource("1_m6fs8")
interactable_resource = SubResource("Resource_rbs5y")

[node name="Labels" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(0, -15)
texture = ExtResource("2_igama")

[node name="Label" type="Label" parent="Labels"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -13.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Test"
label_settings = ExtResource("4_oco1s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_356m4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_28gpt")

[node name="DialogHandler" type="Node" parent="."]
script = ExtResource("5_o84kc")

[node name="InteractiveHandler" type="Node" parent="."]
script = ExtResource("6_wipk1")

[connection signal="area_entered" from="." to="InteractiveHandler" method="_on_area_entered"]
[connection signal="area_exited" from="." to="InteractiveHandler" method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="InteractiveHandler" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="InteractiveHandler" method="_on_mouse_exited"]
